# example-celery

./: .gitignore  README.md  TODO.md  celerybeat-schedule.db  pyproject.toml  requirements.txt
deploy/: Dockerfile  docker-compose.yml  start.sh
example/: main.py
src/queue/: __init__.py  configs.py  mycelery.py
src/queue/base/: __init__.py  debug.py
src/queue/tasks/giraffe/: __init__.py  hello.py  idempotent.py
src/queue/tasks/hippo/: __init__.py  hello.py  periodic.py  pydantic_task.py
